@@ -11,6 +11,20 @@
 #include <process.h>
 #include <getopt.h>
 
+/* These are also defined in stdio.h. */
+#ifndef SEEK_SET
+#define SEEK_SET 0
+#define SEEK_CUR 1
+#define SEEK_END 2
+#endif
+
+/* These are also defined in stdio.h. */
+#ifndef STDIN_FILENO
+#define STDIN_FILENO  0
+#define STDOUT_FILENO 1
+#define STDERR_FILENO 2
+#endif
+
 #ifdef __cplusplus
 extern "C" {
 #endif
